--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
             <p>
               Our approach surpasses SAO in semantic plausibility and event coherence, producing audio that more accurately aligns with the textual prompts. At the same time, it retains the high-fidelity characteristics of waveform VAEs.
             </p>
+            <p>
+              (🎧 Please use headphones for optimal listening experience.)
+            </p>
+            
           </div>
 
           <!-- Scrollable Table Wrapper -->
